--- a/src/main/main.html
+++ b/src/main/main.html
@@ -17,7 +17,7 @@
 						</form>
 						<form class="d-flex mb-0 gap-4">
 							<button class="btn btn-light btn-sm theme-btn" type="button">Theme</button>
-							<button class="btn btn-light btn-sm node-address-btn" type="button">Node RPC</button>
+							<button class="btn btn-light btn-sm node-address-btn" type="button">RPC node</button>
 						</form>
 						<ul class="navbar-nav">
 							<li class="nav-item dropdown">
@@ -41,7 +41,7 @@
 				<div class="modal-dialog modal-dialog-centered" role="document">
 					<div class="modal-content">
 						<div class="modal-header">
-							<h5 class="modal-title">Node RPC API address</h5>
+							<h5 class="modal-title">RPC node API address</h5>
 							<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 						</div>
 						<div class="modal-body">
@@ -87,7 +87,7 @@
 						<div class="list-group list-group-flush">
 							<a class="list-group-item list-group-item-action py-3 theme-btn"><i class="fa-solid fa-palette"></i> Change theme</a>
 							<li class="list-group-item"></li>
-							<a class="list-group-item list-group-item-action py-3 node-address-btn"><i class="fa-solid fa-server"></i> Change Node RPC</a>
+							<a class="list-group-item list-group-item-action py-3 node-address-btn"><i class="fa-solid fa-server"></i> Change RPC node</a>
 							<li class="list-group-item"></li>
 							<a class="list-group-item list-group-item-action py-3" href="#welcome"><i class="fa-solid fa-wallet"></i> Create new wallet</a>
 							<li class="list-group-item"></li>
