--- a/src/main/main.html
+++ b/src/main/main.html
@@ -47,11 +47,11 @@
 						<div class="modal-body">
 							<form id="node-address">
 								<div class="input-group">
-									<input class="form-control" name="node-address" type="url" placeholder="http://[USERNAME]:[PASSWORD]@[IP]:[PORT]" required="" value="https://rpc.bglwallet.io">
+									<input class="form-control" name="node-address" type="url" placeholder="http://[USERNAME]:[PASSWORD]@[IP]:[PORT]" required="" value="https://rpc.bitgesell.app">
 									<button class="btn btn-success" type="submit">Change</button>
 								</div>
 							</form>
-							<small class="form-text text-muted">Alternative RPC node: <kbd>https://rpc2.bglwallet.io</kbd></small>
+							<small class="form-text text-muted">Alternative RPC node: <kbd>https://rpc2.bitgesell.app</kbd></small>
 						</div>
 					</div>
 				</div>
